[package]
name = "ecg"
description = "Edu Cube Game - cubic game, created for educational purposes"
authors = ["Timur Israpilov <very1fake.coder@gmail.com>"]
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = "0.3.15"
tracing = "0.1.36"
wgpu = "0.13.1"
winit = "0.27.3"
