[package]
name = "ecg"
description = "Edu Cube Game - cubic game, created for educational purposes"
authors = ["Timur Israpilov <very1fake.coder@gmail.com>"]
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = "0.3"
tracing = "0.1"
wgpu = "0.13"
winit = "0.27"
anyhow = "1.0"
thiserror = "1.0"


[profile.final]
inherits = "release"
lto = true
codegen-units = 1
