[package]
name = "ecg"
description = "Edu Cube Game - cubic game, created for educational purposes"
authors = ["Timur Israpilov <very1fake.coder@gmail.com>"]
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.12", features = ["derive"] }
glam = { version = "0.21", features = ["bytemuck"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wgpu = "0.13"
winit = "0.27"


[profile.final]
inherits = "release"
strip = true
lto = true
codegen-units = 1
