[package]
name = "ecg-game"
description = "Edu Cube Game - cubic game, created for educational purposes"
authors = ["Timur Israpilov <very1fake.coder@gmail.com>"]
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["debug_overlay"]

tracy = ["tracy-client", "common/tracy"]
tracy-memory = ["tracy"]
debug_overlay = ["egui", "egui_winit_platform", "egui_wgpu_backend"]

[dependencies]
glam.workspace = true
bytemuck = { version = "1.12", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.22", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wgpu = "0.14"
winit = { version = "0.27", default-features = false, features = ["x11"] }

common = { package = "ecg-common", path = "../common" }

wgpu-profiler = "0.10"
tracy-client = { version = "0.15.0", optional = true }

egui = { version = "0.19", optional = true }
egui_winit_platform = { version = "0.16", optional = true }
egui_wgpu_backend = { version = "0.20.0", optional = true }

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "camera"
harness = false
